      replaying plots (including when resizing screen devices and using
      \code{dev.copy()}) will work better when the palette is changed
      during a plot.

      \item \code{chol(pivot = TRUE)} now defaults to LAPACK, not LINPACK.
      
      \item The \code{parse()} function has a new parameter 
      \code{keep.source}, which defaults to \code{options("keep.source")}.
    }
  }

  \subsection{LONG VECTORS}{
    \itemize{
      \item There is support for vectors longer than \eqn{2^{31}-1}{2^31
      - 1} elements on 64-bit platforms.  This applies to raw, logical,
      integer, double, complex and character vectors, as well as lists.
      (Elements of character vectors remain limited to
      \eqn{2^{31}-1}{2^31 - 1} bytes.)

      Not all aspects of such vectors are completely implemented (nor
      completely tested).

      \item Most operations which can sensibly be done with long vectors
      now work: others may return the error \sQuote{long vectors not
      supported yet}.  Most of these are because they explicitly work
      with integer indices (e.g. \code{anyDuplicated()} and
      \code{match()}) or because of other limits (e.g. of character
      strings or matrix dimensions) would be exceeded or the operations
      would be extremely slow.

      \item \code{length()} returns a double for long vectors, and
      lengths can be set to \eqn{2^{31}}{2^31} or more by the
      replacement function with a double value.

      \item Most aspects of indexing are available.  Generally
      double-valued indices can be used to access elements beyond
      \eqn{2^{31}-1}{2^31 - 1}.

      \item There is some support for matrices and arrays with each
      dimension less than \eqn{2^{31}}{2^31} but total number of
      elements more than that.  Only some aspects of matrix algebra work
      for such matrices, often taking a very long time.  In other cases
      the underlying Fortran code has an unstated restriction (as was