@@ -104,10 +104,26 @@ static int R_Mem_Profiling=0;
 extern void get_current_mem(unsigned long *,unsigned long *,unsigned long *); /* in memory.c */
 extern unsigned long get_duplicate_counter(void);  /* in duplicate.c */
 extern void reset_duplicate_counter(void);         /* in duplicate.c */
+static int R_Line_Profiling = 0;
+
 
 #ifdef Win32
 HANDLE MainThread;
 HANDLE ProfileEvent;
+
+static void lineprof(char* buf, SEXP srcref) {
+    int len;
+    if (srcref && !isNull(srcref) && (len = strlen(buf)) < 1000) {
+	SEXP filename;
+	int line = asInteger(srcref);
+	PROTECT(filename = R_GetSrcFilename(srcref));
+	const char *f = strrchr(CHAR(STRING_ELT(filename, 0)), '/');
+	if (!f) f = CHAR(STRING_ELT(filename, 0));
+	else f = f + 1;
+	snprintf(buf+len, 1100-len, "%s#%d ", f, line);
+	UNPROTECT(1);
+    }
+}
 
 static void doprof(void)
 {
@@ -115,7 +131,7 @@ static void doprof(void)
     char buf[1100];
     unsigned long bigv, smallv, nodes;
     int len;
-
+    
     buf[0] = '\0';
     SuspendThread(MainThread);
     if (R_Mem_Profiling){
@@ -126,14 +142,20 @@ static void doprof(void)
 	    }
 	    reset_duplicate_counter();
     }
+    if (R_Line_Profiling)
+    	lineprof(buf, R_Srcref);
+        
     for (cptr = R_GlobalContext; cptr; cptr = cptr->nextcontext) {
 	if ((cptr->callflag & (CTXT_FUNCTION | CTXT_BUILTIN))
 	    && TYPEOF(cptr->call) == LANGSXP) {
 	    SEXP fun = CAR(cptr->call);
 	    if(strlen(buf) < 1000) {
+	    	strcat(buf, "\"");
 		strcat(buf, TYPEOF(fun) == SYMSXP ? CHAR(PRINTNAME(fun)) :
-		       "<Anonymous>");
-		strcat(buf, " ");
+		       	"<Anonymous>");
+		strcat(buf, "\" ");
+		if (R_Line_Profiling)
+		    lineprof(buf, cptr->srcref);
 	    }
 	}
     }
@@ -153,6 +175,21 @@ static void __cdecl ProfileThread(void *pwait)
     }
 }
 #else /* not Win32 */
+
+static void lineprof(SEXP srcref) {
+    int len;
+    if (srcref && !isNull(srcref)) {
+	SEXP filename;
+	int line = asInteger(srcref);
+	PROTECT(filename = R_GetSrcFilename(srcref));
+	const char *f = strrchr(CHAR(STRING_ELT(filename, 0)), '/');
+	if (!f) f = CHAR(STRING_ELT(filename, 0));
+	else f = f + 1;
+	fprintf(R_ProfileOutfile, "%s#%d ", f, line);
+	UNPROTECT(1);
+    }
+}
+
 static void doprof(int sig)
 {
     RCNTXT *cptr;
@@ -165,6 +202,9 @@ static void doprof(int sig)
 		     nodes, get_duplicate_counter());
 	    reset_duplicate_counter();
     }
+    if (R_Line_Profiling)
+    	lineprof(R_Srcref);
+
     for (cptr = R_GlobalContext; cptr; cptr = cptr->nextcontext) {
 	if ((cptr->callflag & (CTXT_FUNCTION | CTXT_BUILTIN))
 	    && TYPEOF(cptr->call) == LANGSXP) {
@@ -173,6 +213,8 @@ static void doprof(int sig)
 	    fprintf(R_ProfileOutfile, "\"%s\" ",
 		    TYPEOF(fun) == SYMSXP ? CHAR(PRINTNAME(fun)) :
 		    "<Anonymous>");
+	    if (R_Line_Profiling)
+	    	lineprof(cptr->srcref);
 	}
     }
     if (newline) fprintf(R_ProfileOutfile, "\n");
@@ -206,7 +248,7 @@ static void R_EndProfiling(void)
     R_Profiling = 0;
 }
 
-static void R_InitProfiling(SEXP filename, int append, double dinterval, int mem_profiling)
+static void R_InitProfiling(SEXP filename, int append, double dinterval, int mem_profiling, int line_profiling)
 {
 #ifndef Win32
     struct itimerval itv;
@@ -223,13 +265,16 @@ static void R_InitProfiling(SEXP filename, int append, double dinterval, int mem
 	error(_("Rprof: cannot open profile file '%s'"),
 	      translateChar(filename));
     if(mem_profiling)
-	fprintf(R_ProfileOutfile, "memory profiling: sample.interval=%d\n", interval);
-    else
-	fprintf(R_ProfileOutfile, "sample.interval=%d\n", interval);
+	fprintf(R_ProfileOutfile, "memory profiling: ");
+    if(line_profiling)
+        fprintf(R_ProfileOutfile, "line profiling: ");
+    fprintf(R_ProfileOutfile, "sample.interval=%d\n", interval);
 
     R_Mem_Profiling=mem_profiling;
     if (mem_profiling)
 	reset_duplicate_counter();
+	
+    R_Line_Profiling = line_profiling;
 
 #ifdef Win32
     /* need to duplicate to make a real handle */
@@ -256,7 +301,7 @@ static void R_InitProfiling(SEXP filename, int append, double dinterval, int mem
 SEXP do_Rprof(SEXP args)
 {
     SEXP filename;
-    int append_mode, mem_profiling;
+    int append_mode, mem_profiling, line_profiling;
     double dinterval;
 
 #ifdef BC_PROFILING
@@ -270,9 +315,11 @@ SEXP do_Rprof(SEXP args)
     append_mode = asLogical(CADR(args));
     dinterval = asReal(CADDR(args));
     mem_profiling = asLogical(CADDDR(args));
+    line_profiling = asLogical(CAD4R(args));
+    
     filename = STRING_ELT(CAR(args), 0);
     if (LENGTH(filename))
-	R_InitProfiling(filename, append_mode, dinterval, mem_profiling);
+	R_InitProfiling(filename, append_mode, dinterval, mem_profiling, line_profiling);
     else
 	R_EndProfiling();
     return R_NilValue;
@@ -1440,7 +1487,7 @@ SEXP attribute_hidden do_return(SEXP call, SEXP op, SEXP args, SEXP rho)
     return R_NilValue; /*NOTREACHED*/
 }
 
-/* Declated with a variable number of args in names.c */
+/* Declared with a variable number of args in names.c */
 SEXP attribute_hidden do_function(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     SEXP rval, srcref;
